--- a/tool.ipynb
+++ b/tool.ipynb
@@ -69,13 +69,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = generative_models.GenerationConfig(temperature=0.4)\n",
+    "config = generative_models.GenerationConfig(temperature=0.4, max_output_tokens=300)\n",
     "# Load model with config\n",
     "model = GenerativeModel(\n",
     "    \"gemini-pro\",\n",
     "    tools = [search_tool],\n",
     "    generation_config = config\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Call the defined function within the tool to generate output\n",
+    "# output = model.generate(\"get_search_flights\", input_data)"
    ]
   }
  ],
@@ -95,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
